--- a/WebSite/Views/_ViewImports.cshtml
+++ b/WebSite/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using WebSite
-@namespace WebSite.Pages
+﻿@using WebSite
+@using WebSite.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
